[package]
name = "rust-linked-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent_lru = "0.2.0"
rand = "0.8.5"
rayon = "1.5.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmarks"
harness = false
